tools/architecture/validate-source-imports/tests/fixtures/invalid/contracts-analytics-imports-adapter/src/schema.ts
import { clickhouse } from "@platform/adapters-clickhouse";
export type Schema = Record<string, unknown>;
